--- a/css/classes.css
+++ b/css/classes.css
@@ -18,18 +18,11 @@
     background-color: var(--color-blue);
 }
 
-body {
-    background-color: var(--body-bg-color);
-    color: var(--body-color);
+.over {
+    cursor: pointer;
 }
-
-hr {
-    background-color: var(--color-blue);
-    height:5px;
-    border: 0px;
-    margin-inline-end:0px;
-    margin-inline-start:0px;
-    width:96px;
+.icon-medium {
+    font-size: 30px;
 }
 
 .t1 {
@@ -68,16 +61,16 @@ word-break:break-word;
 -webkit-font-smoothing:antialiased;
     }
 
-    .t4 {
-color:var(--t4-color);
-display:block;
-font-family:Comfortaa,Nunito,Quicksand;
-font-size:24px;
-font-weight:400;
-text-rendering:optimizelegibility;
-text-size-adjust:100%;
--webkit-font-smoothing:antialiased;
-    }
+.t4 {
+    color:var(--t4-color);
+    display:block;
+    font-family:Comfortaa,Nunito,Quicksand;
+    font-size:24px;
+    font-weight:400;
+    text-rendering:optimizelegibility;
+    text-size-adjust:100%;
+    -webkit-font-smoothing:antialiased;
+}
 
 .t5 {
     color:var(--t5-color);
