--- a/css/palette_colors.css
+++ b/css/palette_colors.css
@@ -4,10 +4,11 @@
       --color-blue-1:#155592;
 
       --color-blue: rgb(25, 175, 255);
-      --color-green:rgb(73, 255, 128);
+      --color-green:rgb(61, 221, 109);
       --color-orange:rgb(255, 154, 60);
+      --color-pink:rgb(255, 61, 245);
       
-      --color-grey-1:rgb(30, 30, 40);
+      --color-grey-1:rgb(30, 30, 30);
       --color-grey-2:rgb(54, 54, 54);
       --color-grey-3:rgb(80,80,80);
 
