--- a/css/mode_color_calm.css
+++ b/css/mode_color_calm.css
@@ -2,7 +2,7 @@
     /* light mode */
     --body-bg-color: var(--color-blue-1);
     --body-color: white;
-    --t1-color: var(--color-grey-7);
+    --t1-color: white;
     --t2-color: var(--color-grey-6);
     --t3-color: var(--color-grey-7);
     --t4-color: var(--color-grey-6);
